@@ -1,26 +1,25 @@
 \name{extractDIC}
 %\docType{genericFunction}
 \alias{extractDIC}
-\alias{extractDIC.mer}
-\alias{extractAIC.mer}
+\alias{extractDIC.merMod}
+%\alias{extractAIC.mer}
 
 \title{
-Extract AIC and DIC from a mer model
+Extract DIC from a \code{merMod} model
 }
 
 \description{
- Computes the (generalized) Akaike *A*n *I*nformation *C*riterion 
- and *D*eviance *I*nformation *C*riterion for a mer model.
+ Computes the (generalized) *D*eviance *I*nformation *C*riterion for a \code{merMod} model.
 }
 \usage{
 extractDIC(fit,\dots)
-\method{extractDIC}{mer}(fit,\dots)
+\S3method{extractDIC}{merMod}(fit,\dots)
 
-\method{extractAIC}{mer}(fit,\dots)
+%\method{extractAIC}{mer}(fit,\dots)
 }
 
 \arguments{
-  \item{fit}{fitted \code{mer} mode, usually the result of a fiiter like \code{mer}.}
+  \item{fit}{fitted \code{merMod} mode, usually the result of a fiiter like \code{merMod}.}
   \item{\dots}{further arguments (currently unused).}
 }
 
@@ -33,7 +32,7 @@ extractDIC(fit,\dots)
 
 \examples{
 fm1 <- lmer(Reaction ~ Days + (Days|Subject), sleepstudy)
-extractAIC(fm1)
+AIC(fm1)
 extractDIC(fm1)
 }
 
